new footer and header

--- a/loop/about.html
+++ b/loop/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>联系我们</title>
+		<title>美中新视角基金会</title>
 		<meta charset="UTF-8">
 		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -26,6 +26,7 @@
 			}
 		</style>
 	</head>
+
 	<body>
 		<div class="container">
 			<div class="row" id="navDiv">
@@ -56,8 +57,8 @@
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="contact.html">中文</a>
-					    <a class="dropdown-item" href="contact_EN.html">English</a>
+					    <a class="dropdown-item" href="about.html">中文</a>
+					    <a class="dropdown-item" href="about_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
@@ -67,7 +68,9 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<!-- <h5>关于我们</h5>
+						</br>
+						<h5>关于我们</h5>
+						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
@@ -75,38 +78,6 @@
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
 							基金会是一个被美国国税局批准的501c3非营利教育性机构。
-						</p>
-						<HR align=center width=1000 color=black SIZE=5> -->
-						</br>
-						<h5>联系我们</h5>
-						</br>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会美国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：1743 22nd St NW, Washington, DC 20008
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话：+1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org, ucnpf@163.com
-						</p>
-						<HR align=left width=55% color=black size=1>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							美中新视角基金会中国联络处:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							地址：北京市朝阳区北苑路180号加利大厦1号楼A-501
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							电话： +86 010-64961765
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							邮箱： info@ucnpf.org; ucnpf@163.com
 						</p>
 					</div>
 				</div>
