--- a/loop/about_EN.html
+++ b/loop/about_EN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Contact Us</title>
+		<title>About Us</title>
 		<meta charset="UTF-8">
 		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -15,23 +15,18 @@
 			.box{
 				border:5px solid rgba(0,0,0,0);
 			}
-			.logoBox{
-				align-content: center;
-			}
-			.logoImg{
-				width: 250px;
-			}
 			.indexBox{
-				height: 1000px;
+				height: 800px;
 			}
 			.contentBox{
-				height: 1000px;
+				height: 800px;
 			}
 			.logoBox{
 				align-content: center;
 			}
 		</style>
 	</head>
+
 	<body>
 		<div class="container">
 			<div class="row" id="navDiv">
@@ -62,8 +57,8 @@
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="contact.html">Chinese</a>
-					    <a class="dropdown-item" href="contact_EN.html">English</a>
+					    <a class="dropdown-item" href="about.html">Chinese</a>
+					    <a class="dropdown-item" href="about_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
@@ -73,7 +68,9 @@
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
-						<!-- <h5>About Us</h5>
+						</br>
+						<h5>About Us</h5>
+						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. In 2018 most of its functions were transferred to Washington, D.C., and it is now represented by offices on both the East and West Coast of the United States.
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
@@ -81,47 +78,6 @@
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
 							The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.
-						</p>
-						<HR align=center width=1000 color=black SIZE=5> -->
-						</br>
-						<h5>Contact Us</h5>
-						</br>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							Washington DC Office:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							Address: 1743 22nd St NW, Washington, DC 20008
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							TEL: +1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							E-mail: info@ucnpf.org, ucnpf@163.com
-						</p>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							California Office:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							Address: 2804 Gateway Oaks Dr Ste 200 Sacramento CA 95833
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							TEL: +1（626）656-3512
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							E-mail: info@ucnpf.org, ucnpf@163.com
-						</p>
-						<HR align=left width=55% color=black size=1>
-						<p style="text-indent:2em; font-weight:bold;"><span style="font-size:15px;line-height:1.6em;">
-							Beijing Office:
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							Address: 501-A Jiali Building, No.180 Beiyuan Road, Chaoyang, Beijing 100101
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							TEL: +86 010-64961765
-						</p>
-						<p style="text-indent:4em;"><span style="font-size:15px;line-height:1em;">
-							E-mail: info@ucnpf.org; ucnpf@163.com
 						</p>
 					</div>
 				</div>
