--- a/loop/index_v4.html
+++ b/loop/index_v4.html
@@ -19,22 +19,22 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v3.html"><button type="button" class="btn btn-secondary navBtn">首页</button></a>
+					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">新视角杂志</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">新视角杂志</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">钝角网</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
@@ -43,7 +43,7 @@
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="#">English</a>
+					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
