--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -3,111 +3,93 @@
 	<head>
 		<title>The U.S. China Perspectives Foundation</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/footer.css">
+		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+		
 		<link rel="stylesheet" href="css/skeleton.css">
 		<link rel="stylesheet" href="css/index.css">
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
-				<div class="col-10 box">
-					<img src="images/shared/logo.png" class="rounded d-block logoImg" style="margin-left:-20px;">
+			<div class="row" id="navDiv">
+				<div class="w-20">
+					<img src="images/newLogo.png" id="logoImg" />
 				</div>
-				<div class="col-2 box logoBox">
-					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
-					  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    Language 
+				<div class="w-10 ml-1">
+					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
+				</div>
+				<div class="w-10">	
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">Projects</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">News</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">About Us</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
+				</div>
+				<div class="w-10">
+					<div class="dropdown">
+					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					    Language
 					  </button>
-					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="index_v3.html">Chinese</a>
+					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
+					    <a class="dropdown-item" href="index_v4.html">Chinese</a>
 					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12 box navBox">
-					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">The U.S. China Perspectives Foundation</a>
-					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					    <span class="navbar-toggler-icon"></span>
-					  </button>
 
-					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-					    <ul class="navbar-nav mr-auto nav-pills">
-					      <li class="nav-item">
-					        <a class="nav-link active" href="index_EN.html">Home <span class="sr-only">(current)</span></a>
-					      </li>
-					      <li class="nav-item dropdown">
-					        <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					          项目
-					        </a>
-					        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					          <a class="dropdown-item" href="">政策性研讨会</a>
-					          <a class="dropdown-item" href="">民间交流</a>
-					          <a class="dropdown-item" href="">培养未来领袖</a>
-					        </div>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="magazine_EN.html">Magazine</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="">Programs</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">News</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="contact_EN.html">About us</a>
-					      </li>
-					    </ul>
-					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
-					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
-					    </form>
-					  </div>
-					</nav>
 
-				</div>
-			</div>
-
-			<div class="row">
-				<div class="col-8 box main-news">
-					<div class="row rolling-news">
+			<div class="content">
+				<div class="row pt-3">
+					<div class="col-8 first-left">
 						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 						  <ol class="carousel-indicators">
 						    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
 						    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+						    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
 						  </ol>
 						  <div class="carousel-inner">
 						    <div class="carousel-item active">
-						      <a href="">
-						      <img class="d-block" src="images/xuezheduihua.jpg"  height="310px" width="750px" alt="First slide">
-						      </a>
-						      <div name="format-padding" style="height:85px"></div>
-						      <div class="carousel-caption d-none d-md-block">
-						    	<p>Sino-Japan Dialogue: Nuclear Issue on Korean Peninsula</p>	
-						  	  </div>
+							  	<a href="">
+							      <img class="d-block w-100" src="images/guojifankong.jpg" alt="First slide">
+							      <div class="carousel-caption d-none d-md-block">
+								    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
+								    <p>2016年7月24日 “第三届中美国际反恐学术研讨会”在北京杉园召开，中美双方退役高级将领、反恐专家及学者计40余人参加了本届研讨会...</p>
+								  </div>
+								</a>
 						    </div>
 						    <div class="carousel-item">
-						      <a href="">
-						      <img class="d-block" src="images/guojifankong.jpg" height="310px" width="750px" alt="Second slide">
-						      </a>
-						      <div name="format-padding" style="height:85px"></div>
+						      <img class="d-block w-100" src="images/xuanfeng.jpg" alt="Second slide">
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>Third Annual Sino-U.S. Counterterrorism Dialogue</p>
-						  	  </div>
+							    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
+							    <p>第三届中美国际反恐学术研讨会第三届中美国际反恐学术研讨会</p>
+							  </div>
 						    </div>
 						    <div class="carousel-item">
-						      <a href="">
-						      <img class="d-block" src="images/xuanfeng.jpg" height="310px" width="750px" alt="Third slide">
-						      </a>
-						      <div name="format-padding" style="height:85px"></div>
+						      <img class="d-block w-100" src="images/guojifankong.jpg" alt="Third slide">
 						      <div class="carousel-caption d-none d-md-block">
-						    	<p>The screening of Documentary Mr.Deng Goes to Washington</p>
-						  	  </div>
+							    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
+							    <p>第三届中美国际反恐学术研讨会第三届中美国际反恐学术研讨会</p>
+							  </div>
+						    </div>
+						    <div class="carousel-item">
+						      <img class="d-block w-100" src="images/guojifankong.jpg" alt="Third slide">
+						      <div class="carousel-caption d-none d-md-block">
+							    <h5><strong>第三届中美国际反恐学术研讨会</strong></h5>
+							    <p>第三届中美国际反恐学术研讨会第三届中美国际反恐学术研讨会</p>
+							  </div>
 						    </div>
 						  </div>
 						  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -121,120 +103,110 @@
 						</div>
 					</div>
 
-					<div class="row event-view">
-						<div class="col-6 event">
-							<nav aria-label="breadcrumb">
-							  <ol class="breadcrumb">
-							    <li class="breadcrumb-item active" aria-current="page"><strong>新闻动态</strong></li>
-							  </ol>
-							</nav>
-
-							<div class="row no-gutters mt-2">
-					            <div class="col-auto">
-					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
-					            </div>
-					            <div class="col">
-					                <div class="card-block px-2">
-					                    <h4 class="card-title">新闻主题</h4>
-					                    <p class="card-text">dsf dsf asdf ad ad asd asdf as DF AS SADF ASFD s dfas df</p>
-					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
-					                </div>
-					            </div>
-					        </div>
-
-							<div class="row no-gutters mt-2">
-					            <div class="col-auto">
-					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
-					            </div>
-					            <div class="col">
-					                <div class="card-block px-2">
-					                    <h4 class="card-title">新闻主题</h4>
-					                    <p class="card-text">dsf dsf asdf ad ad asd asdf as DF AS SADF ASFD s dfas df</p>
-					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
-					                </div>
-					            </div>
-					        </div>
+					<div class="col-4 first-right">
+						<h5 class="right-title">&nbsp;&nbsp;Projects</h5>
+					
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">中日学者对话：朝鲜半岛核问题研讨会</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
 						</div>
 
-						<div class="col-6 view">
-							<nav aria-label="breadcrumb">
-							  <ol class="breadcrumb">
-							    <li class="breadcrumb-item active" aria-current="page"><strong>观点分享</strong></li>
-							  </ol>
-							</nav>
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">市长代表团</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">旋风九日系列访美活动</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+						<hr>
+						<div class="media">
+						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
+						  <div class="media-body">
+						    <h6 class="mt-0"><a href="#">中美反恐论坛</a></h6>
+						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
+						  </div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-							<div class="row no-gutters mt-2">
-					            <div class="col-auto">
-					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
-					            </div>
-					            <div class="col">
-					                <div class="card-block px-2">
-					                    <h4 class="card-title">观点名称</h4>
-					                    <p class="card-text">中东地区一直深受无效治理之苦：根据不同的宗教、宗派和种族背景，</p>
-					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
-					                </div>
-					            </div>
-					        </div>
+			
 
-							<div class="row no-gutters mt-2">
-					            <div class="col-auto">
-					                <img src="images/xuanfeng.jpg" style="width: 200px;" class="img-fluid" alt="">
-					            </div>
-					            <div class="col">
-					                <div class="card-block px-2">
-					                    <h4 class="card-title">观点名称</h4>
-					                    <p class="card-text">中东地区一直深受无效治理之苦：根据不同的宗教、宗派和种族背景，</p>
-					                    <!-- <a href="#" class="btn btn-primary">BUTTON</a> -->
-					                </div>
-					            </div>
-					        </div>
+			<hr class="fancy-hr">
+			<div class="row">
+				<div class="col-9 second-left">
+					<div class="row">
+						<div class="col-6 prog-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 prog-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 prog-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
+						</div>
+						<div class="col-6 prog-block">
+							<img src="images/indexThumbnails/wideThumbnails/af33d8dc873857b612abbdc9343a95e3.png" class="wide-thumbbnail mb-3">
+							<h5>中日学者交流项目</h5>
+							<p>2016年11月3-10日，中美新视角基金会和日本笹川日中友好基金联合举办中国学者赴日交流访问活动，由基金会创始人周志兴带队，邀请了上海复旦大学经济学教授韦森、上海华东师范大学历史教授许纪霖、武汉大学法学教授秦前红前往日本福冈、长崎、东京，</p>
 						</div>
 					</div>
 				</div>
 
-				<div class="col-4 box programs" >
-					<nav aria-label="breadcrumb">
-					  <ol class="breadcrumb">
-					    <li class="breadcrumb-item active" aria-current="page"><strong>运营项目</strong></li>
-					  </ol>
-					</nav>
+				<div class="col-3 second-right">
+					<h4>新闻视角</h4>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
+					<hr>
+					<a href="#">国家高端智库武汉大</a><br>
+					<div class="text-right">6-18-2018</div>
 
-					<div class="programContent">
-						<div class="card" style="width: 100%;">
-						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
-						  <div class="card-body">
-						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
-						  </div>
-						</div>
+					<hr class="dash-hr">
 
-						<div class="card mt-2" style="width: 100%;">
-						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
-						  <div class="card-body">
-						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
-						  </div>
-						</div>
-
-						<div class="card mt-2" style="width: 100%;">
-						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
-						  <div class="card-body">
-						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
-						  </div>
-						</div>
-
-						<div class="card mt-2" style="width: 100%;">
-						  <img class="card-img-top" src="images/xuanfeng.jpg" alt="Card image cap">
-						  <div class="card-body">
-						    <p class="card-text">sdfas asdf asd sad fas df asdf af asd as s asfdsa df asd fasd asd asd safd asd a asd asd as asd as sad sa fsf</p>
-						  </div>
-						</div>
-					</div>
-
-					
+					<img src="images/shared/pub2.jpg">
+					<p>美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。基金会是由一群致力于提升和贡献中美关系的个人组建的。其使命是寻找两国能够合作的领域，正视和缓解两国的分歧，以各类政策性研究和会议，各类教育交流活动为主要形式，达到促进中美关系向更加融洽和信任的方向发展的目的。基金会是一个被美国国税局批准的501c3非营利教育性机构。</p>
+				</div>
+			</div>
+			<hr class="fancy-hr">
+			<div class="row footer">
+				<div class="col-9 ml-auto mr-auto footer-center">
+					<p class="text-center">
+						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+					</p>
+					<p class="text-center">
+						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
+					</p>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 </html>
