--- a/loop/magazine_EN.html
+++ b/loop/magazine_EN.html
@@ -3,14 +3,15 @@
 	<head>
 		<title>The U.S. China Perspectives Foundation</title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-		<link rel="stylesheet" href="css/footer.css">
+		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+		
+		<link rel="stylesheet" href="css/skeleton.css">
+		<link rel="stylesheet" href="css/index.css">
 		<style type="text/css">
-			body{
-				background:url(images/shared/bg.jpg); 
-				background-position:center; 
-				background-repeat:no-repeat;
-			}
 			.box{
 				border:5px solid rgba(0,0,0,0);
 			}
@@ -30,23 +31,41 @@
 	</head>
 	<body>
 		<div class="container">
-			<div class="row">
-				<div class="col-10 box">
-					<img src="images/shared/logo.png" class="rounded d-block logoImg" style="margin-left:-20px;">
+			<div class="row" id="navDiv">
+				<div class="w-20">
+					<img src="images/newLogo.png" id="logoImg" />
 				</div>
-				<div class="col-2 box logoBox">
-					<div class="dropdown" style="margin-top:20px;margin-left:55px;">
-					  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<div class="w-10 ml-1">
+					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
+				</div>
+				<div class="w-10">	
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">Projects</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="">News</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">About Us</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
+				</div>
+				<div class="w-10">
+					<div class="dropdown">
+					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 					    Language
 					  </button>
-					  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="magazine.html">Chinese</a>
-					    <a class="dropdown-item" href="magazine_EN">English</a>
+					    <a class="dropdown-item" href="magazine_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-12 box navBox">
 					<nav class="navbar navbar-expand-lg navbar-default">
 					  <a class="navbar-brand" href="index_EN.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">The U.S. China Perspectives Foundation</a>
@@ -89,12 +108,14 @@
 					  </div>
 					</nav>
 				</div>
-			</div>
+			</div> -->
 			<div class="row">
 				<div class="col-1 box indexBox">
 				</div>
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
+						</br>
+						</br>
 						<h5>New Perspectives Magazine</h5>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">Founded in 2004, New Perspectives is published by the U.S.-China New Perspectives Foundation. It replaced the earlier magazine Leader and features in-depth analysis of China-U.S. relations, Asian-Pacific affairs, and other significant global events. With its meticulous analysis and fresh perspective on these issues, New Perspectives provides a lens for examining Sino-U.S. relations as well as today’s major global challenges.
 						</p>
@@ -110,28 +131,20 @@
 				<div class="col-1 box indexBox">
 				</div>
 			</div>
-			<div class="row">
-				<HR align=center width=1200 color=black SIZE=5>
-				<div class="col-9 footerBox">
-					<footer class="footer-div">
-						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
-						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
-						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
-						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
-					</footer>
-				</div>
-				<div class="col-3 QRcodeBox">
-					<div class="scan-links"> 
-          				<a class="forum-link" href="">
-          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
-          				</a>
-          				<p style="padding-top:20px;"> 微信公众号 </p>
-      				</div>
+			<hr class="fancy-hr">
+			<div class="row footer">
+				<div class="col-9 ml-auto mr-auto footer-center">
+					<p class="text-center">
+						2804 Gateway Oaks Dr Ste 200, Sacramento CA 95833
+					</p>
+					<p class="text-center">
+						Copyright &copy; 2018 The U.S.-China New Perspectives Foundation. All rights reserved.
+					</p>
 				</div>
 			</div>
 		</div>
 	</body>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
 </html>
