almost almost final

--- a/loop/about.html
+++ b/loop/about.html
@@ -24,6 +24,13 @@
 			.logoBox{
 				align-content: center;
 			}
+			.content-div h4{
+				font-weight: bold;
+				color: #265ea5;
+			}
+			.content-div img{
+				width: 800px;
+			}
 		</style>
 	</head>
 
@@ -36,6 +43,9 @@
 				<div class="w-10 ml-1">
 					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
 				</div>
@@ -46,19 +56,16 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
-					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="about.html">中文</a>
-					    <a class="dropdown-item" href="about_EN.html">English</a>
+					    <a class="dropdown-item" href="#">中文</a>
+					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
@@ -69,7 +76,7 @@
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
 						</br>
-						<h5>关于我们</h5>
+						<h4>关于我们</h4>
 						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">美中新视角基金会于2016年成立于美国洛杉矶，2018年将主要办公职能转移到首都华盛顿，同时在美国东西海岸拥有办公地点。
 						</p>
@@ -79,6 +86,7 @@
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
 							基金会是一个被美国国税局批准的501c3非营利教育性机构。
 						</p>
+						<img src="images/news/office__pic2.png">
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
