--- a/loop/magazine.html
+++ b/loop/magazine.html
@@ -27,6 +27,9 @@
 			.logoImg{
 				width: 250px;
 			}
+			.content-div h4{
+				color: #265ea5;
+			}
 		</style>
 	</head>
 	<body>
@@ -38,6 +41,9 @@
 				<div class="w-10 ml-1">
 					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
 				</div>
@@ -48,67 +54,24 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
-					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="magazine.html">中文</a>
-					    <a class="dropdown-item" href="magazine_EN.html">English</a>
+					    <a class="dropdown-item" href="#">中文</a>
+					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
 			</div>
-			<!-- <div class="row">
-				<div class="col-12 box navBox">
-					<nav class="navbar navbar-expand-lg navbar-default">
-					  <a class="navbar-brand" href="index_v3.html" style="color:#d40045;font-weight:bold;margin-left:-30px;">美中新视角基金会</a>
-					  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					    <span class="navbar-toggler-icon"></span>
-					  </button>
+			
 
-					  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-					    <ul class="navbar-nav mr-auto nav-pills">
-					      <li class="nav-item">
-					        <a class="nav-link" href="index_EN.html">首页 <span class="sr-only">(current)</span></a>
-					      </li>
-					      <li class="nav-item dropdown">
-					        <a class="nav-link dropdown-toggle" href="allProjects.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					          项目
-					        </a>
-					        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					          <a class="dropdown-item" href="">政策性研讨会</a>
-					          <a class="dropdown-item" href="">民间交流</a>
-					          <a class="dropdown-item" href="">培养未来领袖</a>
-					        </div>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link active" href="magazine.html">新视角杂志</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="">运营项目</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="view.html">钝角网</a>
-					      </li>
-					      <li class="nav-item">
-					        <a class="nav-link" href="contact.html">关于我们</a>
-					      </li>
-					    </ul>
-					    <form class="form-inline my-2 my-lg-0" style="margin-right:-30px;">
-					      <input class="form-control mr-sm-2" type="search" placeholder="输入内容" aria-label="Search">
-					      <button class="btn btn-primary my-2 my-sm-0" type="submit">搜索</button>
-					    </form>
-					  </div>
-					</nav>
-				</div>
-			</div> -->
+
+
 			<div class="row">
 				<div class="col-1 box indexBox">
 				</div>
@@ -116,7 +79,7 @@
 					<div class="content-div" style="margin-top:20px;">
 						</br>
 						</br>
-						<h5>新视角杂志</h5>
+						<h4><strong>新视角杂志</strong></h4>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">新视角为美中新视角基金会的杂志。2004年创刊，其前身是《领导者》杂志。杂志的定位是对中美关系，亚太事务以及其他重大全球性事务进行深度分析报道，希望以其深度剖析，独特视角全方位解读中美关系以及重大全球事务中存在的问题。
 						</p>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">杂志的主要读者群为大陆的学者，政府高层官员（省部长、中央机关司局以上负责人、各地级市领导），特大型企业CEO、大型民营企业老板、跨国公司驻大中华区总裁、两院院士、部队军以上干部、各国驻华使领馆主要官员，以及其他关心中美关系和亚太事务的人士。
@@ -142,28 +105,6 @@
 					</p>
 				</div>
 			</div>
-			<!-- <div class="row">
-				<HR align=center width=1200 color=black SIZE=5>
-				<div class="col-9 footerBox">
-					<footer class="footer-div">
-						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
-						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
-						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
-						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
-					</footer>
-				</div>
-				<div class="col-3 QRcodeBox">
-					<div class="scan-links"> 
-          				<a class="forum-link" href="">
-          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
-          				</a>
-          				<p style="padding-top:20px;"> 微信公众号 </p>
-      				</div>
-				</div>
-			</div> -->
 		</div>
 	</body>
-	<!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script> -->
 </html>
