--- a/loop/programs.html
+++ b/loop/programs.html
@@ -18,20 +18,20 @@
 				<div class="w-20">
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">首页</a></button>
-				</div>
-				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">项目</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">新视角杂志</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">钝角网</a></button>
+				<div class="w-10 ml-1">
+					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+				</div>
+				<div class="w-10">	
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">新视角杂志</a></button>
+				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
@@ -43,7 +43,7 @@
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="#">English</a>
+					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
