--- a/loop/index.html
+++ b/loop/index.html
@@ -20,7 +20,7 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
+					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
@@ -40,7 +40,7 @@
 				<div class="w-10">
 					<div class="dropdown">
 					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-					    Language
+					    语  言
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="#">中文</a>
@@ -109,13 +109,13 @@
 					</div>
 
 					<div class="col-4 first-right">
-						<h5 class="right-title">&nbsp;&nbsp;观点视角</h5>
+						<h5 class="right-title">近期活动</h5>
 					
 						<hr>
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/IMG_4902.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="#">中日学者对话：朝鲜半岛核问题研讨会</a></h6>
+						    <h6 class="mt-0"><a href="programs.html#1-2">中日学者对话：朝鲜半岛核问题研讨会</a></h6>
 						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
 						  </div>
 						</div>
@@ -124,7 +124,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/shizhang.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="#">市长代表团</a></h6>
+						    <h6 class="mt-0"><a href="programs.html#2-2">市长代表团</a></h6>
 						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
 						  </div>
 						</div>
@@ -132,7 +132,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/331c75f69e01cef4a2b67e310da5b27d.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="#">旋风九日系列访美活动</a></h6>
+						    <h6 class="mt-0"><a href="programs.html#2-1">旋风九日系列访美活动</a></h6>
 						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
 						  </div>
 						</div>
@@ -140,7 +140,7 @@
 						<div class="media">
 						  <img class="align-self-start mr-3 prog-thumbnail" src="images/indexThumbnails/fankong1.jpg" alt="Generic placeholder image">
 						  <div class="media-body">
-						    <h6 class="mt-0"><a href="#">中美反恐论坛</a></h6>
+						    <h6 class="mt-0"><a href="programs.html#1-1">中美反恐论坛</a></h6>
 						    <p class="prog-intro">美中新视角基金会和题本日本石川日中友好基金会在北京善缘联合举办中日学者对话活动</p>
 						  </div>
 						</div>
@@ -188,20 +188,20 @@
 				<div class="col-3 second-right">
 					<h4>观点分享</h4> <!--或者改成近期活动 （西太湖） -->
 					<hr>
-					<a href="#">国家高端智库武汉大</a><br>
-					<div class="text-right">6-18-2018</div>
+					<a href="http://www.dunjiaodu.com/waijiao/3073.html">贸易战会边打边谈，中国最终还是...</a><br>
+					<div class="text-right">6-28-2018</div>
 					<hr>
-					<a href="#">国家高端智库武汉大</a><br>
-					<div class="text-right">6-18-2018</div>
+					<a href="http://www.dunjiaodu.com/top/2018-06-27/3071.html">一带一路自然研究与海外利益保护</a><br>
+					<div class="text-right">6-27-2018</div>
 					<hr>
-					<a href="#">国家高端智库武汉大</a><br>
-					<div class="text-right">6-18-2018</div>
+					<a href="http://www.dunjiaodu.com/daguo/2018-06-24/3062.html">中美贸易战力量悬殊，与特朗普斗气恶战不是上策</a><br>
+					<div class="text-right">6-24-2018</div>
 					<hr>
-					<a href="#">国家高端智库武汉大</a><br>
-					<div class="text-right">6-18-2018</div>
+					<a href="http://www.dunjiaodu.com/daguo/2018-06-22/3057.html">国务卿蓬佩奥讲话的“核”在哪里?</a><br>
+					<div class="text-right">6-22-2018</div>
 					<hr>
-					<a href="#">国家高端智库武汉大</a><br>
-					<div class="text-right">6-18-2018</div>
+					<a href="http://www.dunjiaodu.com/top/2018-06-29/3075.html">未来一百年让中国不可能成为挑战者</a><br>
+					<div class="text-right">6-29-2018</div>
 
 					<hr class="dash-hr">
 
