--- a/loop/programs.html
+++ b/loop/programs.html
@@ -19,7 +19,7 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
+					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
@@ -39,7 +39,7 @@
 				<div class="w-10">
 					<div class="dropdown">
 					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" >
-					    Language
+					    语  言
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="#">中文</a>
@@ -77,7 +77,7 @@
 			      </div>
 
 			      <div class="tab-pane fade prog-content" id="content1-2" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-			      	<h2 class="text-center">中日学者对话</h2>
+			      	<h2 class="text-center">中日学者对话</h2>	
 			      	<p>
 			      		2017年2月26日，美中新视角基金会和日本笹川日中友好基金在北京杉园联合举办中日学者对话活动。会议的主题是朝鲜半岛的核问题。会议邀请了日本国际问题研究所研究员饭村友纪、山崎周以及关西大学教授平岩俊司、霞山会研究员堀田幸裕与中联部原副部长于洪君、中共中央党校国际战略研究院教授张琏瑰、左凤荣等中国资深学者进行了关于朝核问题的深入探讨。
 			      	</p>
