--- a/loop/contact.html
+++ b/loop/contact.html
@@ -33,7 +33,7 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
+					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
@@ -53,7 +53,7 @@
 				<div class="w-10">
 					<div class="dropdown">
 					  <button class="btn btn-secondary dropdown-toggle navBtn dropdown-bg language" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					    Language
+					    语  言
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
 					    <a class="dropdown-item" href="contact.html">中文</a>
