view and minor changes

--- a/loop/magazine_EN.html
+++ b/loop/magazine_EN.html
@@ -39,7 +39,7 @@
 					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">Projects</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
