--- a/loop/view_EN.html
+++ b/loop/view_EN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>钝角网新闻</title>
+		<title>dunjiaodu.com</title>
 		<meta charset="UTF-8">
 		<link rel="icon" href="images/shared/favicon.png" type="image/png" />
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
@@ -39,22 +39,22 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
+					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">About Us</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">新视角杂志</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">Magazine</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">News</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="#">Contact Us</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
@@ -62,7 +62,7 @@
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="view.html">中文</a>
+					    <a class="dropdown-item" href="view.html">Chinese</a>
 					    <a class="dropdown-item" href="view_EN.html">English</a>
 					  </div>
 					</div>
@@ -80,14 +80,11 @@
 						</br>
 						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
-						钝角网由北京凤凰华文传媒有限责任公司主办，是专注国际关系的学术性、思想性网站。它广泛地汇集国内外知名的国际问题专家，提供包括国际关系、中国外交、地缘政治、世界经济、世界历史等在内的国际关系学界研究内容，深入分析对中国和全球具有影响力的重大事件，以富有国际视野的权威分析，打造关心中国外交与国际形势的人士所必读的网站。
-						</p>
-						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
-						更多钝角网新闻请到：<a href="http://www.dunjiaodu.com" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com</a>
+						To view more news please visit: <a href="http://www.dunjiaodu.com" style="font-size:15px;font-family:Georgia;">http://www.dunjiaodu.com</a>
 						</p>
 						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.5em;">
-							扫码下载钝角网APP, 看更多新闻：<img src="images/dunjiaoQR.png" style="height:100px; width:100px"></img>
+							Scan the QR code to download the Dunjiaodu App and view more news：<img src="images/dunjiaoQR.png" style="height:100px; width:100px"></img>
 						</p>
 
 					</div>
