--- a/loop/contact_EN.html
+++ b/loop/contact_EN.html
@@ -41,6 +41,9 @@
 				<div class="w-10 ml-1">
 					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
+				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
@@ -48,10 +51,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">News</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view_EN.html">News</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
