--- a/loop/about_EN.html
+++ b/loop/about_EN.html
@@ -24,6 +24,13 @@
 			.logoBox{
 				align-content: center;
 			}
+			.content-div h4{
+				font-weight: bold;
+				color: #265ea5;
+			}
+			.content-div img{
+				width: 800px;
+			}
 		</style>
 	</head>
 
@@ -36,6 +43,9 @@
 				<div class="w-10 ml-1">
 					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
+				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
@@ -43,10 +53,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">News</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view_EN.html">News</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
@@ -69,7 +76,7 @@
 				<div class="col-10 box contentBox">
 					<div class="content-div" style="margin-top:20px;">
 						</br>
-						<h5>About Us</h5>
+						<h4>About Us</h4>
 						</br>
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">The U.S.-China New Perspectives Foundation was founded in Los Angeles in 2016. In 2018 most of its functions were transferred to Washington, D.C., and it is now represented by offices on both the East and West Coast of the United States.
 						</p>
@@ -79,6 +86,7 @@
 						<p style="text-indent:2em;"><span style="font-size:15px;line-height:1.6em;">
 							The Foundation is a 501(c)(3) non-for-profit educational organization approved by the Internal Revenue Service.
 						</p>
+						<img src="images/news/office__pic2.png"></img>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
