--- a/loop/contact.html
+++ b/loop/contact.html
@@ -35,17 +35,17 @@
 				<div class="w-10 ml-1">
 					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
+				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs.html">项  目</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">新视角杂志</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
