--- a/loop/index_EN.html
+++ b/loop/index_EN.html
@@ -21,6 +21,9 @@
 				<div class="w-10 ml-1">
 					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
+				<div class="w-10">
+					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
+				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
@@ -28,10 +31,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">News</a></button>
-				</div>
-				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">About Us</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view_EN.html">News</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
@@ -42,7 +42,7 @@
 					    Language
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="index_v4.html">Chinese</a>
+					    <a class="dropdown-item" href="index.html">Chinese</a>
 					    <a class="dropdown-item" href="index_EN.html">English</a>
 					  </div>
 					</div>
