--- a/loop/magazine.html
+++ b/loop/magazine.html
@@ -42,10 +42,10 @@
 					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
 				</div>
 				<div class="w-10">	
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="programs.html">项  目</a></button>
 				</div>
 				<div class="w-10">
 					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">新视角杂志</a></button>
@@ -54,7 +54,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
@@ -62,8 +62,8 @@
 					    语  言
 					  </button>
 					  <div class="dropdown-menu dropdown-bg" aria-labelledby="dropdownMenuButton">
-					    <a class="dropdown-item" href="#">中文</a>
-					    <a class="dropdown-item" href="index_EN.html">English</a>
+					    <a class="dropdown-item" href="magazine.html">中文</a>
+					    <a class="dropdown-item" href="magazine_EN.html">English</a>
 					  </div>
 					</div>
 				</div>
