--- a/loop/programs.html
+++ b/loop/programs.html
@@ -22,7 +22,7 @@
 					<a href="index.html"><button type="button" class="btn btn-primary navBtn">首页</button></a>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">关于我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="about.html">关于我们</a></button>
 				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">项  目</a></button>
@@ -34,7 +34,7 @@
 					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">钝角网</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">联系我们</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact.html">联系我们</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
