--- a/loop/view_EN.html
+++ b/loop/view_EN.html
@@ -39,22 +39,22 @@
 					<img src="images/newLogo.png" id="logoImg" />
 				</div>
 				<div class="w-10 ml-1">
-					<a href="index_v4.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
+					<a href="index_EN.html"><button type="button" class="btn btn-primary navBtn">Home</button></a>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">About Us</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="about_EN.html">About Us</a></button>
 				</div>
 				<div class="w-10">	
 					<button type="button" class="btn btn-secondary navBtn"><a href="#">Programs</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="magazine.html">Magazine</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="magazine_EN.html">Magazine</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="view.html">News</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="view_EN.html">News</a></button>
 				</div>
 				<div class="w-10">
-					<button type="button" class="btn btn-secondary navBtn"><a href="#">Contact Us</a></button>
+					<button type="button" class="btn btn-secondary navBtn"><a href="contact_EN.html">Contact Us</a></button>
 				</div>
 				<div class="w-10">
 					<div class="dropdown">
