--- a/loop/programs.html
+++ b/loop/programs.html
@@ -54,8 +54,10 @@
 			    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
 			      <a class="nav-link subject disabled" id="1" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="false">政策性研讨会 &#9658;</a>
 				      <a class="nav-link ml-3 prog-name active" id="p1-1" data-toggle="pill" href="#content1-1" role="tab" aria-controls="v-pills-home" aria-selected="true">中美反恐论坛</a>
-				      <a class="nav-link ml-3 prog-name" id="p1-2" data-toggle="pill" href="#content1-2" role="tab" aria-controls="v-pills-home" aria-selected="false">中日学者对话</a>
+				      <a class="nav-link ml-3 prog-name" id="p1-2" data-toggle="pill" href="#content1-2" role="tab" aria-controls="v-pills-home" aria-selected="false">中日学者对话朝鲜核问题</a>
 				      <a class="nav-link ml-3 prog-name" id="p1-3" data-toggle="pill" href="#content1-3" role="tab" aria-controls="v-pills-home" aria-selected="false">北京跨国公司研讨会</a>
+				      <a class="nav-link ml-3 prog-name" id="p1-3" data-toggle="pill" href="#content1-3" role="tab" aria-controls="v-pills-home" aria-selected="false">西太湖全球公司发展论坛</a>
+				      <a class="nav-link ml-3 prog-name" id="p1-3" data-toggle="pill" href="#content1-3" role="tab" aria-controls="v-pills-home" aria-selected="false">中日学者对话中日经济问题</a>
 			      
 			      <a class="nav-link subject disabled" id="2" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">民间交流 &#9658;</a>
 				      <a class="nav-link ml-3 prog-name" id="p2-1" data-toggle="pill" href="#content2-1" role="tab" aria-controls="v-pills-home" aria-selected="false">旋风九日系列访美活动</a>
